# cloud_oracle_skypie

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg
dependencies_compiled/: sky_pie_baselines-0.1.0-cp37-abi3-macosx_11_0_arm64.whl  sky_pie_baselines-0.1.0-cp37-abi3-manylinux_2_34_x86_64.whl  sky_pie_precomputer_proto_messages-0.0.0-cp37-abi3-macosx_11_0_arm64.whl  sky_pie_precomputer_proto_messages-0.0.0-cp37-abi3-manylinux_2_34_x86_64.whl  skypie_baselines-0.1-cp37-abi3-macosx_11_0_arm64.whl  skypie_baselines-0.1-cp37-abi3-manylinux_2_34_x86_64.whl  skypie_baselines-0.2-cp37-abi3-macosx_11_0_arm64.whl  skypie_baselines-0.2-cp37-abi3-manylinux_2_34_x86_64.whl  skypie_baselines-0.3-cp37-abi3-macosx_11_0_arm64.whl  skypie_baselines-0.3-cp37-abi3-manylinux_2_34_x86_64.whl  skypie_proto_messages-0.1-cp37-abi3-linux_aarch64.whl  skypie_proto_messages-0.1-cp37-abi3-macosx_11_0_arm64.whl  skypie_proto_messages-0.1-cp37-abi3-manylinux_2_34_x86_64.whl
examples/: simple_ilp-baseline_example.py  simple_skypie_example.py
src/skypie/: __init__.py  __main__.py  api.py  oracle.py
src/skypie/data/: gcp_storage_pricing.csv  gcp_storage_pricing.ipynb  latency_10485760.csv  latency_167772160.csv  latency_20971520.csv  latency_335544320.csv  latency_41943040.csv  latency_83886080.csv  network_cost_v2.csv  storage_pricing.csv
src/skypie/experiments/: accuracy.py  benchmarking.py  experiment.py  experiment_real_trace.py  precomputation_batching.py  query_batching.py  query_random.py  query_trace.py  real_trace.py  scaling.py
src/skypie/oracle_impls/: oracle_interface.py  oracle_kmeans.py  oracle_kmeans_native.py  (+1 more)
tests/: test_oracle_accuracy.py
(+40 files in other folders)
