[project]
name = "skypie-oracle"
version = "0.1"
license = { file = "LICENSE" }
readme = "README.md"
description = "A package allowing to query SkyPIE oracles"
authors = [{name = "Tiemo Bang", email = "doe@mail.com"}]
classifiers= [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3"
]
keywords = ["object placement", "optimization", "exact", "oracle"]
requires-python = ">=3.7"
dependencies = [
   "skypie-proto-messages==0.1",
   "skypie-baselines==0.1",
   "cvxpy==1.3.2",
   "Mosek==10.1.10",
   "numpy==1.25.2",
   "torch==2.0.1",
   "pandas==2.0.3",
   "psutil==5.9.7"
]

[project.urls]
Homepage = "https://github.com/hydro-project/cloud_oracle"

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[options.packages.find]
where = "src"

[tool.setuptools]
include-package-data = true

[project.optional-dependencies]
dev = ["pip-tools", "pytest"]