[metadata]
name = sky-pie-oracle
version = 0.1
#license = <license name, e.g. MIT>
description = A package containing the python code of the SkyPIE oracle
#long_description = file: README.rst
author = Tiemo Bang
#author_email = <Optional: author e-mail>
#classifiers=
#   <classifier 1>
#   <...>

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   sky-pie-precomputer-proto-messages
   sky-pie-baselines
   cvxpy==1.3.2
   Mosek==10.1.10
   numpy==1.25.2
   torch==2.0.1
   pandas==2.0.3
   psutil==5.9.7

[options.packages.find]
where=src